Add libcgroup-tools to libvirt container
To reuse the tripleo containers when running libvirtd container
on OCP we need to run it via a wrapper script and create our own
cgroups and run libvirtd using cgexec to break out the default
OCP cgroup of the pod. Otherwise if the libvirtd pod gets
deleted/recreated all VMs get shutdown as OCP cleans up the
resources owned by the pod.

Change-Id: I469b4f51c57e1651f42064b0134aa3916af72d80

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -319,6 +319,7 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 # On RHEL7 /etc/pki/CA was part of base openssl package.
 # On RHEL8 it is now in openssl-perl.
 {% set nova_libvirt_packages_append = [
+    'libcgroup-tools',
     'libseccomp',
     'openssl-perl',
     'openstack-nova-migration',
