Fix placement dependencies to work with mysql's ed25519
In placement, mysql-migrate-db.sh calls the mysql CLI directly,
and when users are configured to authenticate via ed25519, mysql
CLI requires client_ed25519.so, which is provided by mariadb-server.

Partial-Bug: #1866093

Change-Id: I011d0056c34150420eb4b9dfde721a7f30a0e25a
(cherry picked from commit 047170597379f19aa634fca47a82282d7ec2f257)

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -347,7 +347,10 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 
 # Required to allow the mysql-migrate-db.sh data extraction script to be used
 # during an upgrade.
-{% set placement_api_packages_append = ['mariadb'] %}
+# LP #1866093: placement calls the mysql CLI directly, and when
+# users are configured to authenticate via ed25519, mysql CLI
+# requires client_ed25519.so, which is provided by mariadb-server
+{% set placement_api_packages_append = ['mariadb', 'mariadb-server'] %}
 
 
 {# rabbitmq #}
