mariadb: add pynacl dependency to support ed25519
In order to support configuration of ed25519 authentication,
puppet-tripleo uses a python helper that depends on pynacl.

Update the kolla config override to install pynacl in the mariadb
image to support the ed25519 use case.

Change-Id: I908b2af6acce25dfb115463f9d04b0e14c7cba33
Related-Bug: #1866093
(cherry picked from commit 5ec5abb796c9d423f89b3093cb846d390453ad6a)

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -210,6 +210,14 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
     'resource-agents',
     'xinetd'
 ] %}
+# LP #1866093: auth_ed25519 currently requires puppet-tripleo to
+# call a python script depending on pynacl
+{% if distro_python_version.startswith('3') %}
+{% set mariadb_packages_append = mariadb_packages_append + ['python3-pynacl'] %}
+{% else %}
+{% set mariadb_packages_append = mariadb_packages_append + ['python2-pynacl'] %}
+{% endif %}
+
 
 
 {# mistral #}
