Add Octavia use of the rsyslog image
Octavia is adding a container to collect logs from inside the
amphora instances. This patch adds Octavia to the list of services
leveraging the existing rsyslog container.

Change-Id: I3ce6808379790e2e4d96027d5f92384249c8c783
(cherry picked from commit 32c96fe430feddfbf353d076eda36f6cfcdbfd1a)
(cherry picked from commit 284376145b371dfd64243b2a4460fb09c4e6f8aa)

--- a/container-images/overcloud_containers.yaml.j2
+++ b/container-images/overcloud_containers.yaml.j2
@@ -916,8 +916,10 @@ container_images_template:
   - ContainerRsyslogConfigImage
   - ContainerRsyslogSidecarImage
   - ContainerRsyslogSidecarConfigImage
+  - ContainerOctaviaRsyslogImage
   services:
   - OS::TripleO::Services::HAproxy
+  - OS::TripleO::Services::OctaviaHealthManager
   - OS::TripleO::Services::Rsyslog
   - OS::TripleO::Services::SwiftProxy
   - OS::TripleO::Services::SwiftStorage
