Enable centos-release-opstools repo for centos-8
Since centos-release-opstools repo is now available for centos-7
and centos-8. So we do not need distro conditional for that.

Change-Id: I97e2bcd55f4bff448f9c492d8287ac08832010b2
Depends-On: https://review.opendev.org/#/c/725636/
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -43,15 +43,16 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
     'epel-release'
 ] %}
 {% if base_distro == 'centos' and base_distro_tag.startswith('8') %}
-{%   set base_centos_yum_repos_to_enable_append = ['HighAvailability'] %}
+{%   set base_centos_yum_repos_to_enable_append = [
+    'HighAvailability',
+    'centos-opstools'
+] %}
 {%   set base_centos_yum_repos_to_disable_remove = ['influxdb'] %}
 {% endif %}
 
-{% if base_distro == 'centos' and base_distro_tag.startswith('7') %}
 {% set base_centos_yum_repo_packages_append = [
     'centos-release-opstools'
 ] %}
-{% endif %}
 
 {% set base_centos_binary_packages_remove = ['scsi-target-utils'] %}
 
