--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -44,7 +44,7 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 ] %}
 {% if base_distro == 'centos' and base_distro_tag.startswith('8') %}
 {%   set base_centos_yum_repos_to_enable_append = ['HighAvailability'] %}
-{%   set base_centos_yum_repos_to_disable_remove = ['influxdb'] %}
+{%   set base_centos_yum_repos_to_disable_remove = ['centos-rabbitmq-38', 'centos-opstools', 'influxdb'] %}
 {% endif %}
 
 {% set base_centos_yum_repo_packages_append = [
