[Train only] Fix for CentOS8 containers build
Tripleo centos-8 train container bulid job is failing in rdo ci [1]
because of disabling epel repos in openstack/kolla stable/train [2].

Remove 'epel' and 'epel-modular' from repo disable list as
we remove epel-release via base_centos_yum_repo_packages_remove.

Note: This patch is only train specific,
as kolla do not have epel related change in master.

Here is the testproject patch to test
this changes: https://review.rdoproject.org/r/#/c/27634/

[1]: https://review.rdoproject.org/zuul/builds?pipeline=openstack-periodic-24hr&job_name=periodic-tripleo-centos-8-train-containers-build-push
[2]: https://review.opendev.org/#/c/721329/13

Closes-Bug: #1879638
Signed-off-by: Bhagyashri Shewale <bshewale@redhat.com>
Change-Id: Ibc265956acdcba54588e10f7d9137ba22f687992

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -33,13 +33,7 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 
 {% block dumb_init_installation %}{% endblock %}
 
-# Remove EPEL and the dependencies requiring it
-{% set base_centos_yum_repo_keys_remove = [
-    '/etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud',
-] %}
-
 {% set base_centos_yum_repo_packages_remove = [
-    'centos-release-openstack-train',
     'epel-release'
 ] %}
 {% if base_distro == 'centos' and base_distro_tag.startswith('8') %}
@@ -47,7 +41,11 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
     'HighAvailability',
     'centos-opstools'
 ] %}
-{%   set base_centos_yum_repos_to_disable_remove = ['influxdb'] %}
+{%   set base_centos_yum_repos_to_disable_remove = [
+    'influxdb',
+    'epel',
+    'epel-modular'
+] %}
 {% endif %}
 
 {% set base_centos_yum_repo_packages_append = [
@@ -459,6 +457,7 @@ STOPSIGNAL SIGTERM
 # a yum update in the kolla base image. All the other images should inherit this
 # but if the base distro container is out of date (i.g. 7.4 but 7.5 is out) this
 # will pull in the updated packages available. Related issue LP#1770355
+RUN rm -rf /etc/yum.repos.d/CentOS-OpenStack-train.repo
 RUN yum update -y && yum clean all && rm -rf /var/cache/yum
 {% endblock %}
 
@@ -1054,3 +1053,4 @@ RUN mkdir -p /openstack && \
     ln -s /usr/share/openstack-tripleo-common/healthcheck/swift-rsync /openstack/healthcheck && \
     chmod a+rx /openstack/healthcheck
 {% endblock %}
+
