[Ussuri Only] Sync template overrides with Kolla
Kolla moved to 'centos-release-openstack-ussuri' package[1] so make sure
it gets removed as TripleO build image jobs runs with delorean trunk
repos, and mixing trunk repos with CloudSIG repos can cause issues.

Also EPEL handling got changed.

[1] https://review.opendev.org/#/c/731798/

Closes-Bug: #1882246
Change-Id: I3ed31f5ae982ee97d66e497d800bcc5caf171ac8

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -36,20 +36,23 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 # Remove EPEL and the dependencies requiring it
 {% set base_centos_yum_repo_keys_remove = [
     '/etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud',
+    '/etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Virtualization-RDO',
 ] %}
 
 {% set base_centos_yum_repo_packages_remove = [
-    'centos-release-openstack-train',
+    'centos-release-openstack-ussuri',
     'epel-release'
 ] %}
 {% if base_distro == 'centos' and base_distro_tag.startswith('8') %}
 {%   set base_centos_yum_repos_to_enable_append = ['HighAvailability'] %}
-{%   set base_centos_yum_repos_to_disable_remove = ['centos-rabbitmq-38', 'centos-opstools', 'influxdb'] %}
-{% endif %}
-
-{% set base_centos_yum_repo_packages_append = [
-    'centos-release-opstools'
+{%   set base_centos_yum_repos_to_disable_remove = [
+    'centos-rabbitmq-38',
+    'centos-opstools',
+    'epel',
+    'epel-modular',
+    'influxdb'
 ] %}
+{% endif %}
 
 {% set base_centos_binary_packages_remove = ['scsi-target-utils'] %}
 
