--- a/container-images/overcloud_containers.yaml.j2
+++ b/container-images/overcloud_containers.yaml.j2
@@ -854,6 +854,13 @@ container_images_template:
   - OS::TripleO::Services::GlanceApi
   - OS::TripleO::Services::GlanceApiEdge
 
+- imagename: "{{namespace_stein}}/{{name_prefix_stein}}manila-api{{name_suffix_stein}}:{{tag_stein}}"
+  image_source: kolla
+  params:
+  - ContainerManilaApiImageStein
+  services:
+  - OS::TripleO::Services::ManilaApi
+
 - imagename: "{{namespace_stein}}/{{name_prefix_stein}}heat-engine{{name_suffix_stein}}:{{tag_stein}}"
   image_source: kolla
   params:
