[Q->T] Include manila in the Queens to Train Upgrade
In order to do Q->T upgrade when manila is deployed, we
need the Stein container image available.

We check for namespace_stein and if it's defined we provide
them as done for the other services in
I8820293bd1c7f83c00e7abba88181895ef987765

Change-Id: I6a98140b7df8d3460ff8ec54f8b7a0d5abbef515
Related-bz: #1849098
Partial-bug: #1884818
(cherry picked from 55f6aecf6f43e4a16cdbc9da520ec7accc278aa2)

--- a/container-images/overcloud_containers.yaml.j2
+++ b/container-images/overcloud_containers.yaml.j2
@@ -863,6 +863,13 @@ container_images_template:
   - OS::TripleO::Services::GlanceApi
   - OS::TripleO::Services::GlanceApiEdge
 
+- imagename: "{{namespace_stein}}/{{name_prefix_stein}}manila-api{{name_suffix_stein}}:{{tag_stein}}"
+  image_source: kolla
+  params:
+  - ContainerManilaApiImageStein
+  services:
+  - OS::TripleO::Services::ManilaApi
+
 - imagename: "{{namespace_stein}}/{{name_prefix_stein}}heat-engine{{name_suffix_stein}}:{{tag_stein}}"
   image_source: kolla
   params:
