Don't disable centos-rabbitmq-38 repo in base image
Train only.

In kolla images by default we use upstream RabbitMQ 3.7. On CentOS 8 in
Train, Tripleo overrides this to use the centos-rabbitmq-38 repo. The
centos-openstack-release-train package pulls in centos-rabbitmq-38
automatically, which causes erlang compatibility issues for the default
Kolla setup. Kolla is therefore disabling the centos-rabbitmq-38 repo by
default.

This patch avoids disabling the centos-rabbitmq-38 repo, to ensure that
Tripleo continues to use RabbitMQ packages from that source.

Needed-By: https://review.opendev.org/737478

Change-Id: I034dd7f091cf24e6f559cd6b1a860da1caadf12c
Related-Bug: #1884034

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -42,6 +42,7 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
     'centos-opstools'
 ] %}
 {%   set base_centos_yum_repos_to_disable_remove = [
+    'centos-rabbitmq-38',
     'influxdb',
     'epel',
     'epel-modular'
