Include virt-admin in the nova_libvirt container
This is required to alter the libvirt logging level at runtime.

Change-Id: I9c9351d5f86c7f4eac4e5042dae82c10a7011e96
(cherry picked from commit 1c0af4466f5d59dbf99b46359f2bb9ff854a9b4e)

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -331,7 +331,8 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
     'libseccomp',
     'openssl-perl',
     'openstack-nova-migration',
-    'podman'
+    'podman',
+    'libvirt-admin'
 ] %}
 {% if distro_python_version.startswith('2') %}
 {% set nova_libvirt_packages_append = nova_libvirt_packages_append + ['docker'] %}
