--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -487,7 +487,7 @@ container_images_template:
   - OS::TripleO::Services::NeutronL3Agent
 
 - imagename: "{{namespace}}/{{name_prefix}}neutron-metadata-agent{{name_suffix}}:{{tag}}"
-  image_source: kolla
+  image_source: tripleo
   params:
   - ContainerNeutronMetadataImage
   services:
