Add ComputeNeutronl3Agent link to neutron-l3-agent container image
The ComputeNeutronL3Agent isn't associated with the neutron-l3-agent
container image which causes problems on upgrades.

Closes-Bug: #1898256

Change-Id: If5618e542cdd93aa18a865ebac8ca24e4b34d84b
(cherry picked from commit da41f54f9ecf7f8ea3e0997860346810424543d9)
(cherry picked from commit eba3f42168a90080029946d4291812c40a46424a)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -485,6 +485,7 @@ container_images_template:
   - ContainerNeutronL3AgentImage
   services:
   - OS::TripleO::Services::NeutronL3Agent
+  - OS::TripleO::Services::ComputeNeutronL3Agent
 
 - imagename: "{{namespace}}/{{name_prefix}}neutron-metadata-agent{{name_suffix}}:{{tag}}"
   image_source: tripleo
