Add missing ComputeNeutronMetadataAgent service into tripleo_containers.yaml.j2.
When using DVR the Compute roles make use of the services
ComputeNeutronOvsAgent, ComputeNeutronL3Agent, ComputeNeutronMetadataAgent
and ComputeNeutronCorePlugin. However, the ComputeNeutronMetadataAgent was
missing from the tripleo_containers.yaml.j2 which causes issues at the time
of retrieving the images from the Undercloud registry.

Related-Bug: #1898256
Change-Id: I52204ec1bcb3a43e5d8e8503871a27b8bfb88e7b
(cherry picked from commit d2a5d9856d109ce39f598dc64aeb41e9e4f3304b)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -473,6 +473,7 @@ container_images_template:
   - ContainerNeutronMetadataImage
   services:
   - OS::TripleO::Services::NeutronMetadataAgent
+  - OS::TripleO::Services::ComputeNeutronMetadataAgent
 
 - imagename: "{{namespace}}/{{name_prefix}}neutron-openvswitch-agent{{name_suffix}}:{{tag}}"
   image_source: tripleo
