Frr image support
This adds support for the Frr container image. Frr can be found at
https://github.com/FRRouting/frr/ and is an implementation of a suite
of different routing protocols.

Change-Id: Ibbdf63ec372e8496d094f45f2eaef49f9a79d464

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -220,6 +220,13 @@ container_images_template:
   services:
   - OS::TripleO::Services::Etcd
 
+- imagename: "{{namespace}}/{{name_prefix}}frr{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerFrrImage
+  services:
+  - OS::TripleO::Services::Frr
+
 - imagename: "{{namespace}}/{{name_prefix}}glance-api{{name_suffix}}:{{tag}}"
   image_source: tripleo
   params:
