Create a container for Unbound DNS resolver
This patch sets up TripleO to create a container for the Unbound
DNS resolver. This will be used with Designate deployments to
provide DNS resolver services to the deployment and neutron.

Change-Id: Ifccee277393cc9ab095d1785216d3dacfbf3c5ce
(cherry picked from commit 96d3c1fa0613af6ce8fdef01d5f9d696da993aec)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -806,3 +806,11 @@ container_images_template:
   - OS::TripleO::Services::Rsyslog
   - OS::TripleO::Services::SwiftProxy
   - OS::TripleO::Services::SwiftStorage
+
+- imagename: "{{namespace}}/{{name_prefix}}unbound{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerUnboundImage
+  - ContainerUnboundConfigImage
+  services:
+  - OS::TripleO::Services::Unbound
