Add host_vars to define tasks executed before network configurations
This change is a prep work to ensure tasks defined in ExtraConfigPre
and NodeExtraConfig are executed after network configurations.

Related-Bug: #1907214
Change-Id: I0e45090f8db1c1737e69ce906a12027bfe5c3ef0
(cherry picked from commit f19f451f88141c656c18a1c2a96b49874cfb1b0d)
(cherry picked from commit adfee2e68d9efaac7b7b3f24f428ee1d366003cb)

--- a/tripleo_common/templates/host_var_server.j2
+++ b/tripleo_common/templates/host_var_server.j2
@@ -1,3 +1,9 @@
+pre_network_{{ role }}: {% if not pre_network %} [] {% endif %}
+
+{% for deployment in pre_network %}
+  - {{ deployment }}
+{% endfor %}
+
 pre_deployments_{{ role }}: {% if not pre_deployments %} [] {% endif %}
 
 {% for deployment in pre_deployments %}
