[Train Only] Remove python-pip from base image
[1] Added python-pip to base image package list,
but python-pip is only available in train-build-deps
repo, so when train-duild-deps repo is not enabled
container build fails[2].

Since python-pip is not required adding it to
package remove list.

[1] https://review.opendev.org/758057
[2] https://review.rdoproject.org/r/#/c/31826/

Change-Id: If07456763b60099b504f75fbc531dd3e1629bb0b

--- a/container-images/tripleo_kolla_template_overrides.j2
+++ b/container-images/tripleo_kolla_template_overrides.j2
@@ -55,6 +55,10 @@ gpgcheck=0' >> /etc/yum.repos.d/opendaylight.repo
 
 {% set base_centos_binary_packages_remove = ['scsi-target-utils'] %}
 
+{% if distro_python_version.startswith('2') %}
+{% set base_centos_binary_packages_remove = base_centos_binary_packages_remove + ['python-pip'] %}
+{% endif %}
+
 # This installs the puppet dependency in the base container and includes helper scripts
 # Rsync is required for docker-puppet.py to move the generated config to /var/lib/config-data
 # Cron is required by multiple services
