container-images: fix Cinder when running at Edge
When Cinder Volume is running at the Edge, we need to support the
OS::TripleO::Services::CinderVolumeEdge service; as well as the
ContainerCinderConfigImage parameter for the Cinder Volume, since it
only used to be added for Cinder API but Cinder API is disabled at the
Edge.

Closes-Bug: #1920704
Signed-off-by: Emilien Macchi <emilien@redhat.com>
Change-Id: I1e94668978fbf1dc928b6af50a404e6c687707da
(cherry picked from commit 8dc6dfe488439b26db5eec1ae63ef77322bc3787)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -113,6 +113,7 @@ container_images_template:
   - OS::TripleO::Services::CinderBackup
   - OS::TripleO::Services::CinderScheduler
   - OS::TripleO::Services::CinderVolume
+  - OS::TripleO::Services::CinderVolumeEdge
   - OS::TripleO::Services::UndercloudCinderApi
   - OS::TripleO::Services::UndercloudCinderScheduler
   - OS::TripleO::Services::UndercloudCinderVolume
@@ -139,6 +140,7 @@ container_images_template:
   services:
   - OS::TripleO::Services::BlockStorageCinderVolume
   - OS::TripleO::Services::CinderVolume
+  - OS::TripleO::Services::CinderVolumeEdge
   - OS::TripleO::Services::UndercloudCinderVolume
 
 - imagename: "{{namespace}}/{{name_prefix}}collectd{{name_suffix}}:{{tag}}"
