Make sure Heat Ephemeral has images prepared
Add extra Heat Ephemeral service that only ensures the required
container images are prepared.

Change-Id: Ifb2d5dd58e9c703702864f2c152f26a685b0980f
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>
Co-Authored-By: Alex Schultz <aschultz@redhat.com>
(cherry picked from commit fc4e256b22a2f7635180f86dc12fae764c5b2f5c)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -279,6 +279,10 @@ container_images_template:
 
 - imagename: "{{namespace}}/{{name_prefix}}heat-all{{name_suffix}}:{{tag}}"
   image_source: tripleo
+  params:
+  - ContainerHeatAllImage
+  services:
+  - OS::TripleO::Services::HeatEphemeral
 
 - imagename: "{{namespace}}/{{name_prefix}}heat-api-cfn{{name_suffix}}:{{tag}}"
   image_source: tripleo
@@ -297,6 +301,7 @@ container_images_template:
   services:
   - OS::TripleO::Services::HeatApi
   - OS::TripleO::Services::HeatEngine
+  - OS::TripleO::Services::HeatEphemeral
 
 - imagename: "{{namespace}}/{{name_prefix}}heat-engine{{name_suffix}}:{{tag}}"
   image_source: tripleo
@@ -304,6 +309,7 @@ container_images_template:
   - ContainerHeatEngineImage
   services:
   - OS::TripleO::Services::HeatEngine
+  - OS::TripleO::Services::HeatEphemeral
 
 - imagename: "{{namespace}}/{{name_prefix}}horizon{{name_suffix}}:{{tag}}"
   image_source: tripleo
