--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -813,3 +813,17 @@ container_images_template:
   - ContainerUnboundConfigImage
   services:
   - OS::TripleO::Services::Unbound
+
+- imagename: "{{namespace}}/{{name_prefix}}tempest{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerTempestImage
+  services:
+  - OS::TripleO::Services::Tempest
+
+- imagename: "{{namespace}}/{{name_prefix}}tripleoclient{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerTripleoClientImage
+  services:
+  - OS::TripleO::Services::TripleoClient
