Add an API config image heat variable
The designate API needs the API container image in order to setup the
httpd configuration.

Change-Id: I3c64b291079b968eb1462e1d37e2217e8fbe9820

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -163,6 +163,7 @@ container_images_template:
   image_source: tripleo
   params:
   - ContainerDesignateApiImage
+  - ContainerDesignateApiConfigImage
   services:
   - OS::TripleO::Services::DesignateApi
   - OS::TripleO::Services::DesignateCentral
