Tidy up config image declarations
The API needed it's own config container image and the rest were "pick
one there all the same". This patch sets a specific config image for the
API and the rest of the services according to what is really required.

Conflicts:
  container-images/tripleo_containers.yaml

Change-Id: I7867efe52609eff31fca692b5298a9eede35c239
(cherry picked from commit 93b44b67d64a6116d93315cb28a67794c4d2377e)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -172,6 +172,17 @@ container_images_template:
   - OS::TripleO::Services::DesignateProducer
   - OS::TripleO::Services::DesignateWorker
 
+- imagename: "{{namespace}}/{{name_prefix}}designate-base{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerDesignateConfigImage
+  services:
+  - OS::TripleO::Services::DesignateCentral
+  - OS::TripleO::Services::DesignateMDNS
+  - OS::TripleO::Services::DesignateSink
+  - OS::TripleO::Services::DesignateProducer
+  - OS::TripleO::Services::DesignateWorker
+
 - imagename: "{{namespace}}/{{name_prefix}}designate-backend-bind9{{name_suffix}}:{{tag}}"
   image_source: tripleo
   params:
@@ -210,7 +221,6 @@ container_images_template:
 - imagename: "{{namespace}}/{{name_prefix}}designate-worker{{name_suffix}}:{{tag}}"
   image_source: tripleo
   params:
-  - ContainerDesignateConfigImage
   - ContainerDesignateWorkerImage
   services:
   - OS::TripleO::Services::DesignateWorker
