Split off Ceph related container images
This commit updates the default tripleo_containers jinja template
splitting off the Ceph related container images.
With this new approach pulling the ceph containers is optional,
and can be avoided by setting the 'ceph_images' boolean to False.
To make this possible, a new jinja template processing approach
has been introduced, and a template basedir parameter (required
by the jinja loader) has been added to the BaseImageManager.

In particular:

- the 'template_dir' parameter represents the location path to the
  j2 templates that can be included in the main tripleo containers
  template; a default location (which matches with the default j2
  path) has been added, but if nothing is passed the old behavior
  is maintained;

- Two more 'ceph_' prefixed containers, required to deploy the Ceph
  Ingress daemon are added, and they are supposed to match with the
  tripleo-heat-templates 'OS::TripleO::Services::CephIngress' service.
  The Ingress daemon won’t be baked into the Ceph daemon container,
  hence `tripleo container image prepare` should be executed to pull
  the new container images/tags in the undercloud as made for the
  Ceph Dashboard and the regular Ceph image.

Change-Id: I7e337596b653cf635f07a36606e9f673044402a3

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -720,47 +720,9 @@ container_images_template:
   - OS::TripleO::Services::SwiftRingBuilder
   - OS::TripleO::Services::SwiftStorage
 
-- imagename: "{{ceph_namespace}}/{{ceph_image}}:{{ceph_tag}}"
-  image_source: ceph
-  params:
-  - ContainerCephDaemonImage
-  services:
-  - OS::TripleO::Services::CephClient
-  - OS::TripleO::Services::CephExternal
-  - OS::TripleO::Services::CephMds
-  - OS::TripleO::Services::CephMgr
-  - OS::TripleO::Services::CephMon
-  - OS::TripleO::Services::CephOSD
-  - OS::TripleO::Services::CephRgw
-  - OS::TripleO::Services::CephRbdMirror
-
-- imagename: "{{ceph_prometheus_namespace}}/{{ceph_prometheus_image}}:{{ceph_prometheus_tag}}"
-  image_source: prom
-  params:
-  - PrometheusContainerImage
-  services:
-  - OS::TripleO::Services::CephGrafana
-
-- imagename: "{{ceph_alertmanager_namespace}}/{{ceph_alertmanager_image}}:{{ceph_alertmanager_tag}}"
-  image_source: prom
-  params:
-  - AlertManagerContainerImage
-  services:
-  - OS::TripleO::Services::CephGrafana
-
-- imagename: "{{ceph_node_exporter_namespace}}/{{ceph_node_exporter_image}}:{{ceph_node_exporter_tag}}"
-  image_source: prom
-  params:
-  - NodeExporterContainerImage
-  services:
-  - OS::TripleO::Services::CephGrafana
-
-- imagename: "{{ceph_grafana_namespace}}/{{ceph_grafana_image}}:{{ceph_grafana_tag}}"
-  image_source: grafana
-  params:
-  - GrafanaContainerImage
-  services:
-  - OS::TripleO::Services::CephGrafana
+{% if ceph_images | default(true) %}
+{% include 'ceph.j2' %}
+{% endif %}
 
 - imagename: "{{namespace}}/{{name_prefix}}rsyslog{{name_suffix}}:{{tag}}"
   image_source: tripleo
@@ -798,3 +760,4 @@ container_images_template:
   - ContainerTripleoClientImage
   services:
   - OS::TripleO::Services::TripleoClient
+
