ovn-bgp-agent image support
This adds support for the ovn-bgp-agent container image.
ovn-bgp-agent can be found at https://opendev.org/x/ovn-bgp-agent.

Change-Id: Ic656117becd9a059b56a4753a5c579c2ee703cc5

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -240,6 +240,13 @@ container_images_template:
   services:
   - OS::TripleO::Services::Frr
 
+- imagename: "{{namespace}}/{{name_prefix}}ovn-bgp-agent{{name_suffix}}:{{tag}}"
+  image_source: tripleo
+  params:
+  - ContainerOvnBgpAgentImage
+  services:
+  - OS::TripleO::Services::Frr
+
 - imagename: "{{namespace}}/{{name_prefix}}glance-api{{name_suffix}}:{{tag}}"
   image_source: tripleo
   params:
