Update prometheus and alertmanager containers
and also add the pushgateway container for use with ceilometer.

Change-Id: I201c693332c78b6d83e7f5beb5becccd38919197

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -102,6 +102,13 @@ container_images_template:
   - OS::TripleO::Services::CeilometerAgentIpmi
   - OS::TripleO::Services::UndercloudCeilometerAgentIpmi
 
+- imagename: "{{pushgateway_namespace}}/{{pushgateway_image}}:{{pushgateway_tag}}"
+  image_source: prom
+  params:
+  - ContainerCeilometerPushgatewayImage
+  services:
+  - OS::Tripleo::Services::CeilometerPushgateway
+
 - imagename: "{{namespace}}/{{name_prefix}}cinder-api{{name_suffix}}:{{tag}}"
   image_source: tripleo
   params:
