Fix services associated with rsyslog container image
- Swift uses rsyslog running at host, instead of containerized rsyslog.

- RsyslogSidecar service requires the image.

Change-Id: Icd0e1908db6dc9e3320331f0e80b5f2dee50ae4b

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -711,8 +711,7 @@ container_images_template:
   - OS::TripleO::Services::HAproxy
   - OS::TripleO::Services::OctaviaHealthManager
   - OS::TripleO::Services::Rsyslog
-  - OS::TripleO::Services::SwiftProxy
-  - OS::TripleO::Services::SwiftStorage
+  - OS::TripleO::Services::RsyslogSidecar
 
 - imagename: "{{namespace}}/{{name_prefix}}unbound{{name_suffix}}:{{tag}}"
   image_source: tripleo
