Define container image used by GlanceApiInternal service
GlanceApiInternal is a new tripleo service, and it uses the same
container image as the GlanceApi and GlanceApiEdge services.

Change-Id: Ib6188505197d0a267dbd8c4d96f12f31f7b5c9f0

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -242,9 +242,11 @@ container_images_template:
   params:
   - ContainerGlanceApiConfigImage
   - ContainerGlanceApiImage
+  - ContainerGlanceApiInternalConfigImage
   services:
   - OS::TripleO::Services::GlanceApi
   - OS::TripleO::Services::GlanceApiEdge
+  - OS::TripleO::Services::GlanceApiInternal
 
 - imagename: "{{namespace}}/{{name_prefix}}gnocchi-api{{name_suffix}}:{{tag}}"
   image_source: tripleo
