Add NovaLibvirtLegacy to tripleo_containers.yaml.j2
With the multi-os support, it is necessary to have two different
containers for libvirt services depending on the OS version. This change
adds the newly created NovaLibvirtLegacy service to the
tripleo_containers.yaml.j2 file to support this functionality.

Depends-On: https://review.opendev.org/c/openstack/tripleo-heat-templates/+/873149
Change-Id: Iceece3c382f7dad4de2208d40589cdb9ec30e09c
(cherry picked from commit dc5ddacf60ec073f56a12d21350021160c5456a1)

--- a/container-images/tripleo_containers.yaml.j2
+++ b/container-images/tripleo_containers.yaml.j2
@@ -547,6 +547,7 @@ container_images_template:
   services:
   - OS::TripleO::Services::NovaCompute
   - OS::TripleO::Services::NovaLibvirt
+  - OS::TripleO::Services::NovaLibvirtLegacy
   - OS::TripleO::Services::NovaMigrationTarget
 
 - imagename: "{{namespace}}/{{name_prefix}}nova-conductor{{name_suffix}}:{{tag}}"
@@ -562,6 +563,7 @@ container_images_template:
   - ContainerNovaLibvirtImage
   services:
   - OS::TripleO::Services::NovaLibvirt
+  - OS::TripleO::Services::NovaLibvirtLegacy
 
 - imagename: "{{namespace}}/{{name_prefix}}nova-novncproxy{{name_suffix}}:{{tag}}"
   image_source: tripleo
